--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gh-pages": "^3.2.3",
     "postcss": "^8.4.5",
     "postcss-load-config": "^3.1.1",
+    "prettier": "2.5.1",
     "svelte": "^3.44.0",
     "svelte-preprocess": "^4.10.4",
     "tailwindcss": "^3.0.12"
